--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -12,20 +12,56 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bNavigation"
-        android:layout_below="@+id/toolbarT"
-
-
-
-
+        android:layout_below="@+id/actionBar"
         >
 
     </FrameLayout>
 
     <android.support.v7.widget.Toolbar
-        android:background="@color/colorvego"
-        android:id="@+id/toolbarT"
+        android:id="@+id/actionBar"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+
+        android:layout_alignParentTop="true"
+        android:background="#002e65"
+
+        android:paddingRight="0dp"
+        android:layout_alignParentLeft="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="9dp"
+                android:src="@drawable/logo_white" />
+
+
+            <ImageView
+                android:id="@+id/profile"
+                android:layout_width="39dp"
+                android:layout_height="match_parent"
+
+                android:layout_alignParentStart="true"
+
+
+                android:layout_alignParentTop="true"
+                android:onClick="openDrawer"
+                android:paddingTop="2dp"
+                android:src="@drawable/profile_on_top"
+                tools:ignore="OnClick"
+                android:layout_alignParentLeft="true" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bNavigation"
@@ -33,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/menu_nav"
-        android:background="@color/primary_light"
+        android:background="#333333"
         android:scrollbars="horizontal"
         ></android.support.design.widget.BottomNavigationView>
 
