--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,27 +7,31 @@
     android:background="@drawable/vegowall"
     >
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="271dp"
+        android:layout_height="122dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
-
-
-    </LinearLayout>
+        android:layout_marginTop="45dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_welcome_screen" />
 
     <TextView
         android:id="@+id/signupTxt"
         android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="41dp"
+        android:layout_alignParentStart="true"
         android:clickable="true"
         android:focusable="true"
-        android:text="new_to_my_app_sign_up_here"
+        android:text="new here? Sign Up"
         android:textAlignment="center"
+        android:textColor="#626262"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -35,25 +39,24 @@
 
     <Button
         android:id="@+id/signinBtn"
-        android:backgroundTint="@color/Vigo"
-        android:layout_width="match_parent"
+        android:layout_width="308dp"
         android:layout_height="wrap_content"
-        android:textColor="#ffff"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="82dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginBottom="94dp"
+        android:backgroundTint="#cf0545"
         android:gravity="center"
-        android:text="sign_in" />
+        android:text="sign_in"
+        android:textColor="#ffff" />
 
     <EditText
         android:id="@+id/emailTxt"
-        android:layout_width="match_parent"
+        android:layout_width="301dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView10"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="236dp"
         android:background="#cccbcb"
-        android:layout_marginRight="80dp"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="enter your email"
@@ -62,53 +65,15 @@
         android:paddingTop="7.5dp" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="22dp"
-        android:paddingRight="5dp"
-        android:text="e_mail_address"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.259"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp"
-        android:layout_above="@+id/emailTxt"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingEnd="5dp" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="206dp"
-        android:text="password"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.261"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.453"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="25dp" />
-
-    <TextView
         android:id="@+id/textView10"
         android:layout_width="117dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="103dp"
+        android:layout_marginTop="250dp"
         android:text="أو"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -117,27 +82,64 @@
 
     <EditText
         android:id="@+id/passwordTxt"
-        android:layout_width="match_parent"
-        android:layout_marginRight="80dp"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp"
+        android:layout_width="301dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="178dp"
         android:background="#cccbcb"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:hint="enter_password"
-        android:inputType="textPassword" />
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:paddingBottom="7.5dp"
+        android:paddingTop="7.5dp" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="170dp"
+        android:layout_width="302dp"
         android:layout_height="36dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="47dp"
-        android:background="#fe4646"
-        android:textColor="#FFFF"
-        android:text="تسجيل الدخول بواسطة جوجل" />
+        android:layout_marginTop="188dp"
+        android:background="@color/scifitBlue"
+        android:text="تسجيل الدخول بواسطة جوجل"
+        android:textColor="#FFFF" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="42dp"
+        android:background="@color/scifitBlue" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="175dp"
+        android:layout_height="1dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="258dp"
+        android:background="@color/scifitBlue" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="175dp"
+        android:layout_height="1dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/divider4"
+        android:background="@color/scifitBlue" />
+
+    <TextView
+        android:id="@+id/txtForget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/emailTxt"
+        android:layout_marginBottom="149dp"
+        android:text="Forget your password?"
+        android:textColor="@color/scifitBlue" />
 
 </RelativeLayout>
