--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -7,19 +7,78 @@
     tools:context=".Activity.MealIngrActivity">
 
 
+    // هذي اللي تسوي البار اللي فوق
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/actionBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+
+        android:layout_alignParentTop="true"
+        android:background="#002e65"
+
+        android:paddingRight="0dp"
+        android:layout_alignParentLeft="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="9dp"
+                android:src="@drawable/logo_white" />
+
+
+            <ImageView
+                android:id="@+id/profile"
+                android:layout_width="39dp"
+                android:layout_height="match_parent"
+
+                android:layout_alignParentStart="true"
+
+
+                android:layout_alignParentTop="true"
+                android:onClick="openDrawer"
+                android:paddingTop="2dp"
+                android:src="@drawable/profile_on_top"
+                tools:ignore="OnClick"
+                android:layout_alignParentLeft="true" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
+
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarid"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:gravity="center"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/actionBar"
+        android:background="#bebcbc"
         android:elevation="0dp"
-        android:id="@+id/appbarid">
-        
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:src="@drawable/header"
-            />
+        android:gravity="center"
+        android:layout_alignParentLeft="true">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="188dp"
+            android:layout_height="106dp">
+
+            <ImageView
+                android:layout_width="188dp"
+                android:layout_height="match_parent"
+
+                android:src="@drawable/header" />
+
+        </android.support.v7.widget.CardView>
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.TabLayout
@@ -28,12 +87,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/appbarid"
-        android:background="@color/colorPrimary"
+        android:background="#333333"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/tabindicatorcolor"
+        app:tabIndicatorColor="#1d1d1d"
         app:tabMode="fixed"
         app:tabTextColor="@color/tabtextcolor"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        />
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
