--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,16 +7,63 @@
     android:background="@drawable/vegowall"
     tools:context=".Activity.SignupActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/actionBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+
+        android:layout_alignParentTop="true"
+        android:background="#002e65"
+
+        android:paddingRight="0dp"
+        android:layout_alignParentLeft="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="9dp"
+                android:src="@drawable/logo_white" />
+
+
+            <ImageView
+                android:id="@+id/profile"
+                android:layout_width="39dp"
+                android:layout_height="match_parent"
+
+                android:layout_alignParentStart="true"
+
+
+                android:layout_alignParentTop="true"
+                android:onClick="openDrawer"
+                android:paddingTop="2dp"
+                android:src="@drawable/profile_on_top"
+                tools:ignore="OnClick"
+                android:layout_alignParentLeft="true" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="302dp"
+        android:layout_height="36dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
+        android:layout_marginTop="104dp"
+        android:background="@color/scifitBlue"
+        android:text="تسجيل الدخول بواسطة جوجل"
+        android:textColor="#FFFF" />
 
-
-    </LinearLayout>
 
     <TextView
         android:id="@+id/signinTxt"
@@ -36,115 +83,56 @@
 
     <Button
         android:id="@+id/signupBtn"
-        android:backgroundTint="@color/Vigo"
-        android:layout_width="match_parent"
+        android:layout_width="322dp"
         android:layout_height="wrap_content"
-        android:textColor="#ffff"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="82dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginBottom="70dp"
+        android:backgroundTint="#cf0545"
         android:gravity="center"
-        android:text="Sign-up" />
+        android:text="Sign-up"
+        android:textColor="#ffff" />
 
     <EditText
         android:id="@+id/emailTxt"
-        android:layout_width="match_parent"
-        android:layout_marginRight="80dp"
+        android:layout_width="337dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="141dp"
+        android:layout_marginTop="229dp"
         android:background="#cccbcb"
         android:ems="10"
         android:gravity="center"
         android:hint="enter your email"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:paddingBottom="7.5dp"
+        android:paddingTop="7.5dp" />
 
     <EditText
         android:id="@+id/userNameTxt"
-        android:layout_width="match_parent"
-        android:layout_marginRight="80dp"
+        android:layout_width="331dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="153dp"
+        android:layout_marginBottom="180dp"
         android:background="#cccbcb"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="confirm password"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="22dp"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_marginTop="202dp"
-        android:paddingRight="5dp"
-        android:text="password"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.259"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="22dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="106dp"
-        android:paddingRight="5dp"
-        android:text="Email_address"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.259"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView9"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView9"
-        android:layout_marginBottom="203dp"
-        android:text="confirm password"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.261"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.453" />
+        android:inputType="textPassword"
+        android:paddingBottom="7.5dp"
+        android:paddingTop="7.5dp" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_height="33dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="35dp"
-        android:text="ayman_s_first_app"
+        android:layout_marginTop="167dp"
+        android:text="أو"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -153,17 +141,18 @@
 
     <EditText
         android:id="@+id/passwordTxt"
-        android:layout_width="match_parent"
-        android:layout_marginRight="80dp"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp"
+        android:layout_width="336dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="240dp"
         android:background="#cccbcb"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="enter_password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:paddingBottom="7.5dp"
+        android:paddingTop="7.5dp" />
 
     LinearLayout
 
