--- a/app/src/main/res/layout/day_meals.xml
+++ b/app/src/main/res/layout/day_meals.xml
@@ -10,9 +10,8 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp" >
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -20,35 +19,33 @@
 
             <ImageView
                 android:id="@+id/calsCount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="19dp"
+                android:layout_height="32dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="93dp"
-                app:srcCompat="@drawable/icons_meal_px"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="93dp" />
+                android:layout_marginStart="100dp"
+                app:srcCompat="@drawable/icons_meal_px" />
 
             <ImageView
                 android:id="@+id/calsIcon"
-                android:layout_width="53dp"
-                android:layout_height="50dp"
+                android:layout_width="19dp"
+                android:layout_height="21dp"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/txtCals"
-                app:srcCompat="@drawable/calories"
-                android:layout_toRightOf="@+id/txtCals" />
+                android:layout_marginEnd="140dp"
+                app:srcCompat="@drawable/calories" />
 
             <TextView
                 android:id="@+id/txtCount"
-                android:layout_width="72dp"
+                android:layout_width="78dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="-93dp"
-                android:layout_toStartOf="@+id/calsCount"
-                android:text="يوم 1"
-                android:textColor="@android:color/black"
                 android:layout_marginRight="-93dp"
-                android:layout_toLeftOf="@+id/calsCount" />
+                android:layout_toLeftOf="@+id/calsCount"
+                android:layout_toStartOf="@+id/calsCount"
+                android:text="عدد الوجبات"
+                android:textColor="@android:color/black" />
 
             <TextView
                 android:id="@+id/txtCals"
@@ -61,13 +58,11 @@
             <ImageView
                 android:id="@+id/dayIcon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+                android:layout_height="23dp"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="12dp"
-                app:srcCompat="@drawable/icons_calendar_px_"
-                android:layout_marginRight="12dp"
-                android:layout_alignParentRight="true" />
+                android:layout_marginStart="-68dp"
+                android:layout_toEndOf="@+id/txtDay"
+                app:srcCompat="@drawable/icons_calendar_px_" />
 
             <TextView
                 android:id="@+id/txtDay"
@@ -75,11 +70,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="49dp"
+                android:layout_marginEnd="68dp"
                 android:text="يوم 1"
-                android:textColor="@android:color/black"
-                android:layout_marginRight="49dp"
-                android:layout_alignParentRight="true" />
+                android:textColor="@android:color/black" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
