--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,12 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="Vigo">#29a123</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorvego">#5be754</color>
+    <color name="wall">#e5e5e5</color>
+    <color name="scifitBlue">#002e65</color>
+    <color name="scifitRed">#cf0545</color>
 
 
     <color name="tabtextcolor">#fff</color>
