add meals + assign it to user

--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -34,10 +34,19 @@
         app:tabMode="fixed"
         app:tabTextColor="@color/tabtextcolor"
         android:layout_alignParentLeft="true" />
+
     <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_id"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tablayout_id"
-        android:id="@+id/viewpager_id"></android.support.v4.view.ViewPager>
+        android:layout_height="339dp"
+        android:layout_below="@+id/tablayout_id"></android.support.v4.view.ViewPager>
+
+    <Button
+        android:id="@+id/saveMealBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="احفظ الوجبة" />
 
 </RelativeLayout>
