--- a/app/src/main/res/layout/fragment_meal_ing.xml
+++ b/app/src/main/res/layout/fragment_meal_ing.xml
@@ -64,7 +64,7 @@
                     android:layout_marginEnd="42dp"
                     android:layout_marginRight="42dp"
                     android:paddingTop="5dp"
-                    android:text="السـعــرات"
+                    android:text="نوع السعرات "
                     android:textColor="#ffffff" />
 
                 <TextView
@@ -77,7 +77,7 @@
                     android:layout_marginLeft="54dp"
                     android:layout_marginStart="54dp"
                     android:paddingTop="5dp"
-                    android:text="نوع الغذاء"
+                    android:text="مجموع السعرات"
                     android:textColor="#ffffff" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
