changing activity layout

--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -5,22 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.AddMealsFragment"
     android:background="#ffffff">
-
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:background="@color/wall"
         tools:ignore="UselessParent"
-        android:background="@color/wall">
-
+        android:layout_alignParentLeft="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
@@ -28,7 +24,6 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/actionBar"
                 android:background="#ffffff">
-
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
@@ -38,10 +33,8 @@
                     android:paddingTop="5dp"
                     android:text="إضافة جدول غذائي للمتدرب"
                     android:textColor="#232931"
-
                     />
             </RelativeLayout>
-
             <Spinner
                 android:id="@+id/selectUser"
                 android:layout_width="match_parent"
@@ -50,11 +43,8 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
-
                 android:backgroundTint="@color/scifitBlue"
-
                 />
-
             <Spinner
                 android:id="@+id/selectDay"
                 android:layout_width="match_parent"
@@ -63,17 +53,10 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
-
                 android:backgroundTint="@color/scifitBlue" />
-
             <Spinner
-<<<<<<< HEAD
-                android:id="@+id/selectUser12"
-                android:layout_width="match_parent"
-=======
                 android:id="@+id/selectMeal"
-                android:layout_width="336dp"
->>>>>>> 215df1e4a45c0ebafcb52b32a189239c490e3d8e
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
@@ -81,78 +64,46 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="50dp"
                 android:backgroundTint="#ccc8c8" />
-
             <Spinner
-<<<<<<< HEAD
-                android:id="@+id/selectMeal1"
+                android:id="@+id/selectMeal2"
                 android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_above="@+id/selectMeal3"
+                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-=======
-                android:id="@+id/selectMeal2"
-                android:layout_width="336dp"
->>>>>>> 215df1e4a45c0ebafcb52b32a189239c490e3d8e
-                android:layout_height="35dp"
-                android:layout_above="@+id/selectUser15"
-                android:layout_centerHorizontal="true"
-
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#ccc8c8" />
-
             <Spinner
-<<<<<<< HEAD
-                android:id="@+id/selectUser14"
-                android:layout_width="match_parent"
-=======
                 android:id="@+id/selectMeal3"
-                android:layout_width="336dp"
->>>>>>> 215df1e4a45c0ebafcb52b32a189239c490e3d8e
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
-                android:backgroundTint="#ccc8c8"
-                />
-
+                android:backgroundTint="#ccc8c8" />
             <Spinner
-<<<<<<< HEAD
-                android:id="@+id/selectUser15"
-                android:layout_width="match_parent"
-=======
                 android:id="@+id/selectMeal4"
-                android:layout_width="336dp"
->>>>>>> 215df1e4a45c0ebafcb52b32a189239c490e3d8e
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="19dp"
                 android:backgroundTint="#ccc8c8" />
-
             <Spinner
-<<<<<<< HEAD
-                android:id="@+id/selectUser13"
-                android:layout_width="match_parent"
-=======
                 android:id="@+id/selectMeal5"
-                android:layout_width="336dp"
->>>>>>> 215df1e4a45c0ebafcb52b32a189239c490e3d8e
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginBottom="154dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#ccc8c8" />
-
             <Button
-<<<<<<< HEAD
-                android:id="@+id/saveDay2"
-                android:layout_width="match_parent"
-=======
                 android:id="@+id/saveDayMeal"
-                android:layout_width="241dp"
->>>>>>> 215df1e4a45c0ebafcb52b32a189239c490e3d8e
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/addMoreMeals2"
                 android:layout_marginLeft="25dp"
@@ -160,7 +111,6 @@
                 android:layout_toLeftOf="@+id/addMoreMeals2"
                 android:layout_toStartOf="@+id/addMoreMeals2"
                 android:text="حفظ الوجبات لليوم" />
-
             <Button
                 android:id="@+id/addMoreMeals2"
                 android:layout_width="102dp"
@@ -168,7 +118,6 @@
                 android:layout_marginBottom="250dp"
                 android:layout_marginLeft="150dp"
                 android:text="إضافة وجبة"></Button>
-
             <Button
                 android:id="@+id/addNewMeal"
                 android:layout_width="match_parent"
@@ -176,9 +125,7 @@
                 android:layout_marginBottom="250dp"
                 android:layout_marginLeft="150dp"
                 android:text="إضافة وجبة جديدة"
-
                 ></Button>
-
             <TextView
                 android:id="@+id/tvprofileGoal"
                 android:layout_width="wrap_content"
@@ -191,7 +138,6 @@
                 android:layout_marginRight="32dp"
                 android:text="TextView"
                 android:textSize="18sp" />
-
             <TextView
                 android:id="@+id/tvProfileName"
                 android:layout_width="wrap_content"
@@ -200,7 +146,6 @@
                 android:layout_alignParentBottom="true"
                 android:text="TextView"
                 android:textSize="18sp" />
-
             <TextView
                 android:id="@+id/tvProfileHeight"
                 android:layout_width="wrap_content"
@@ -209,7 +154,6 @@
                 android:layout_centerHorizontal="true"
                 android:text="TextView"
                 android:textSize="18sp" />
-
             <TextView
                 android:id="@+id/tvWeight"
                 android:layout_width="wrap_content"
@@ -218,7 +162,6 @@
                 android:layout_centerHorizontal="true"
                 android:text="TextView"
                 android:textSize="18sp" />
-
             <TextView
                 android:id="@+id/tvprofileActivity"
                 android:layout_width="wrap_content"
@@ -228,7 +171,6 @@
                 android:layout_below="@+id/tvprofileGoal"
                 android:text="TextView"
                 android:textSize="18sp" />
-
             <TextView
                 android:id="@+id/tvProfileAge"
                 android:layout_width="wrap_content"
@@ -237,12 +179,6 @@
                 android:layout_marginBottom="19dp"
                 android:text="TextView"
                 android:textSize="18sp" />
-
         </LinearLayout>
-
-
     </ScrollView>
-
-
-
 </RelativeLayout>
