--- a/app/src/main/res/layout/fragment_meal_ing.xml
+++ b/app/src/main/res/layout/fragment_meal_ing.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:paddingTop="10dp"
-                    android:text="مكونات الوجبة"
+                    android:text="القيم الغذائية"
                     android:textColor="#ffffff" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
