--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="Vigo">#29a123</color>
-    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorPrimaryDark">#002e65</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorvego">#5be754</color>
     <color name="wall">#e5e5e5</color>
