--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -35,7 +36,8 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/signinBtn"
@@ -113,24 +115,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="42dp"
-        android:background="@color/scifitBlue" />
+        android:background="@color/scifitBlue"
+        android:layout_alignParentLeft="true" />
 
-    <View
-        android:id="@+id/divider4"
-        android:layout_width="175dp"
-        android:layout_height="1dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="258dp"
-        android:background="@color/scifitBlue" />
 
-    <View
-        android:id="@+id/divider3"
-        android:layout_width="175dp"
-        android:layout_height="1dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/divider4"
-        android:background="@color/scifitBlue" />
+
+
 
     <TextView
         android:id="@+id/txtForget"
@@ -140,6 +130,7 @@
         android:layout_alignStart="@+id/emailTxt"
         android:layout_marginBottom="149dp"
         android:text="Forget your password?"
-        android:textColor="@color/scifitBlue" />
+        android:textColor="@color/scifitBlue"
+        android:layout_alignLeft="@+id/emailTxt" />
 
 </RelativeLayout>
